Bug 260101 - style:use-window-font-color property not loaded properly
Summary: style:use-window-font-color property not loaded properly
Status: VERIFIED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: opendocument (other bugs)
Version First Reported In: 2.1
Platform: Unlisted Binaries All
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-28 19:39 UTC by Lassi Nieminen
Modified: 2011-12-21 10:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
open office document to be open in kword (11.11 KB, application/x-zip-compressed)
2009-11-28 19:39 UTC, David Faure
Details
screen shot of the document in kword (151.07 KB, image/jpeg)
2009-11-28 19:41 UTC, David Faure
Details
screen shot of the document in open office (157.94 KB, image/jpeg)
2009-11-28 19:43 UTC, David Faure
Details
Screenshot in Latest Calligra Words (93.11 KB, image/png)
2011-09-26 08:43 UTC, swathi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2010-12-16 00:29:44 UTC


---- Reported by faure@kde.org 2010-03-22 12:39:10 ----




---- Reported by lassi.ta.nieminen@nokia.com 2009-11-28 20:39:20 +0200 ----

Created an attachment
open office document to be open in kword

SOFTWARE VERSION:
  Kubuntu 9.04
  Koffice (svn version 1053384)
  Test document (OpenOffice 3.0): oow_highlighted_text.odt

STEPS LEADING TO THE PROBLEM:
  1. Open the attached document in OpenOffice.
  2. Open the same document in KOffice.
  3. Observe heighlighted text effect for all colors.

EXPECTED OUTCOME:
  Kword should be able to display highlighted text in all colors
  As seen in attachment oow_highlighted_text.jpeg.

ACTUAL OUTCOME:
  Kword is not displaying the highlighted text in black color.
  See attachment oow_highlighted_text-kword.jpeg

FREQUENCY:
  Always



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-11-28 20:41:21 +0200 ----

Created an attachment
screen shot of the document in kword



---- Additional Comments From lassi.ta.nieminen@nokia.com 2009-11-28 20:43:27 +0200 ----

Created an attachment
screen shot of the document in open office



--- Bug imported by faure@kde.org 2010-03-22 12:39  ---

This bug was previously known as _bug_ 148749.

Imported an attachment (id=41893)
Imported an attachment (id=41894)
Imported an attachment (id=41895)

CC member noname.Kn@noname.com does not have an account here





---- Additional Comments From boud@valdyas.org 2010-03-23 10:45:38 ----

Not filter but core bugs.



---- Additional Comments From zander@kde.org 2010-03-23 18:13:49 ----

*** http://bugs.kde.org/show_bug.cgi?id=231654 has been marked as a duplicate of this bug. ***



--- Bug imported by faure@kde.org 2010-12-16 00:31  ---

This bug was previously known as bug 231659.

Imported an attachment (id=54632)
Imported an attachment (id=54633)
Imported an attachment (id=54634)

The original submitter of attachment 54632 [details] is unknown.
   Reassigning to the person who moved it here: faure@kde.org.
The original submitter of attachment 54633 [details] is unknown.
   Reassigning to the person who moved it here: faure@kde.org.
The original submitter of attachment 54634 [details] is unknown.
   Reassigning to the person who moved it here: faure@kde.org.

Comment 1 swathi 2011-09-26 08:43:29 UTC
Created attachment 63970 [details]
Screenshot in Latest Calligra Words

In Latest Revision(Git commit  beebf480a6b044ad95e998e94a1693bc5c73703f),Test hilighted in Black Color is displaying fine.
Comment 2 Camilla Boemann 2011-11-13 20:38:02 UTC
Git commit 4102d598792bb66c5e11e3a2cb5e27a071714f01 by C. Boemann.
Committed on 13/11/2011 at 21:16.
Pushed by boemann into branch 'master'.

More work on the auto color.

It should work now - famous last words..

BUG:260101
BUG:260075

M  +18   -9    libs/kotext/styles/KoCharacterStyle.cpp
M  +1    -1    libs/textlayout/KoTextDocumentLayout.h
M  +13   -12   libs/textlayout/KoTextLayoutArea_paint.cpp
M  +2    -2    libs/textlayout/KoTextLayoutTableArea.cpp

http://commits.kde.org/calligra/4102d598792bb66c5e11e3a2cb5e27a071714f01
Comment 3 swathi 2011-12-21 10:25:04 UTC
Verified in b2b29030922345d8e727ed03e80fb77537aece46.