More work on the auto color.

It should work now - famous last words..

BUG:260101
BUG:260075